--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -1,7 +1,17 @@
+// Images
 $background-main: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/background_tileable.png);
 
+
+// Colors
 $primary-color: #333;
 $logo-color: #00c5c2;
 
 $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
+$color-orange: #febb2c;
+$color-pink: #fd2c76;
+
+
+// Heights
+$nav-height: 50px;
+$nav-height-thin: 25px;
