--- a/templates/partials/player/agenda.hbs
+++ b/templates/partials/player/agenda.hbs
@@ -1,6 +1,6 @@
-<section class="col-lg-6 col-sm-6">
+<section class="agenda">
   <div class="row room-container">
-  
+
   	<h3>{{name}} the {{title}}</h3>
 
   	<h4>Agenda</h4>
@@ -11,8 +11,6 @@
       {{/each}}
   	</ul>
 
-	</div>
-	<div class="form row" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
-	</div>
+  </div>
+
 </section>
