--- a/templates/partials/decider/agenda_item_instructions.hbs
+++ b/templates/partials/decider/agenda_item_instructions.hbs
@@ -1,7 +1,9 @@
-<section class="col-lg-6 col-sm-6">
-  <div class="row room-container">
-		<h3>"Now I'll award bonus points. I'll review each of your secret agenda points and award coins if they were included in the winning proposal."</h3>
+<div class="row room-container">
+	<h3>"Now I'll award bonus points. I'll review each of your secret agenda points and award coins if they were included in the winning proposal."</h3>
 
-		Press next when everyone's ready
+	Press next when everyone's ready
 
-</section>
+</div>
+{{!--   <div class="form row" id="decider">
+    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+  </div> --}}
