--- a/templates/partials/decider/deliberate_instructions.hbs
+++ b/templates/partials/decider/deliberate_instructions.hbs
@@ -1,8 +1,10 @@
-<section class="col-lg-6 col-sm-6">
-  <div class="row room-container">
-		Read out loud:
+<div class="row room-container">
+	Read out loud:
 
-		<h3>"Now we'll take {{config.deliberateSeconds}} seconds to talk about your proposals. Once the time runs out you'll have an opportunity to buy more time. Then I'll choose the winning proposal."</h3>
- 
-		When everyone is ready, press next.
-</section>
+	<h3>"Now we'll take {{config.deliberateSeconds}} seconds to talk about your proposals. Once the time runs out you'll have an opportunity to buy more time. Then I'll choose the winning proposal."</h3>
+
+	When everyone is ready, press next.
+</div>
+  <div class="form row" id="decider">
+    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+  </div>
