--- a/templates/partials/decider/think_instructions.hbs
+++ b/templates/partials/decider/think_instructions.hbs
@@ -1,8 +1,10 @@
-<section class="col-lg-6 col-sm-6">
-  <div class="row room-container">
-		Read out loud:
+<div class="row room-container">
+	Read out loud:
 
-		<h3>"You will have {{config.thinkSeconds}} seconds to think of a proposal from your character's perspective."</h3>
- 
-		When everyone is ready, press next.
-</section>
+	<h3>"You will have {{config.thinkSeconds}} seconds to think of a proposal from your character's perspective."</h3>
+
+	When everyone is ready, press next.
+</div>
+<div class="form row" id="decider">
+  <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+</div>
