--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -27,7 +27,7 @@ function playerEntry() {
 
 }
 
-function rulesAnim() {
+function rulesAnim(callback) {
 
 	var screens = $('.row.screen');
   
@@ -40,7 +40,7 @@ function rulesAnim() {
 		screensAnim.fromTo(el, .5, {xPercent:-100}, { x:0, xPercent:0, ease:Expo.easeInOut, opacity: 1, display:'table-cell', delay:.5 });
 
 		if(index < screens.length-1)
-			screensAnim.fromTo(el, .5, {xPercent:0}, { x:200, xPercent:200, ease:Expo.easeInOut, opacity:0, display:'none', delay:6 });
+			screensAnim.fromTo(el, .5, {xPercent:0}, { x:200, xPercent:200, ease:Expo.easeInOut, opacity:0, display:'none', delay:3 });
 
   });
 
