make sure buttons can be clicked remove "next" button from all partials - it is in the base file move any buttons into room container div fix styling on global "next" button

--- a/templates/partials/decider/decide.hbs
+++ b/templates/partials/decider/decide.hbs
@@ -2,10 +2,12 @@
 
 	Time's up! I will now choose the best proposal.
 
-</div>
-<div class="form row" id="decider">
+	<div class="form" id="decider">
 	{{#each players}}
     <button class="post-button submit" data-event="game:proposal_selected" data-package='{{uid}}' data-keep_enabled="true" data-autohide="true" type="submit" name="submit">{{username}}</button>
 	{{/each}}
 	{{!-- <input data-event="game:proposal_selected" /> --}}
 </div>
+
+</div>
+
