--- a/templates/partials/shared/roles.hbs
+++ b/templates/partials/shared/roles.hbs
@@ -11,7 +11,7 @@
 {{/each}}
 
 {{!-- {{#if decider}} --}}
-	<div class="form row" id="decider">
+{{!-- 	<div class="form row" id="decider">
     <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
-	</div>
+	</div> --}}
 {{!-- {{/if}} --}}
