--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -21,7 +21,7 @@
   </div>
 
 </div>
-
+{{!-- 
 <div class="form row" id="decider">
   <input id="btn-next" data-event="game:next" class="post-button submit hidden-el" type="submit" name="submit" value="next">
-</div>
+</div> --}}
