--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -64,6 +64,33 @@
 
 }
 
+.form {
+	&.decider, &#decider, &#decider-controls {
+		position: absolute;
+		bottom: 0px;
+		width: 100%;
+		max-height: 80px;
+		margin: 0px;
+
+		input {
+			width: 100%;
+			// height:100%;
+			margin: 0px;
+			position: absolute;
+			bottom: 0px;
+			background-color: $color-seafoam;
+		}
+
+		@at-root .form {
+			min-height: 0px;
+		}
+
+	}
+}
+
+
+
+
 .room-container {
 	bottom: 10%;
 	padding-left: 10%;
@@ -81,7 +108,7 @@
 	}
 
 	@if (section &) {
-		section & {
+		@at-root section {
 			height: 100%;
 			width: 100%;
 			display: table;
