--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -183,6 +183,21 @@
         height: 45px;
         width: auto; }
 
+.form.decider, .form#decider, .form#decider-controls {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  max-height: 80px;
+  margin: 0px; }
+  .form.decider input, .form#decider input, .form#decider-controls input {
+    width: 100%;
+    margin: 0px;
+    position: absolute;
+    bottom: 0px;
+    background-color: #00D6B4; }
+  .form {
+    min-height: 0px; }
+
 .room-container {
   bottom: 10%;
   padding-left: 10%;
@@ -195,7 +210,7 @@
   vertical-align: middle; }
   .room-container h1 {
     font-size: 6em; }
-  section .room-container {
+  section {
     height: 100%;
     width: 100%;
     display: table; }
