--- a/templates/partials/css.hbs
+++ b/templates/partials/css.hbs
@@ -57,13 +57,7 @@
 {{else}}
 
 	{{!-- PRODUCTION/STAGING --}}
-
-	{{!-- Bootstrap non-responsive for group view --}}
-	{{#ifeq section 'group/monitor'}}
-		<link rel="stylesheet" href="/plugins/groupview/bootstrap.css">
-	{{else}}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	{{/ifeq}}
-	<link href="{{cdnAsset site='emerging-citizens' env=environment type='css' }}" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href="{{cdnAsset site='at-stake' env=environment type='css' }}" rel="stylesheet">
 
 {{/ifeq}}
