--- a/templates/partials/css.hbs
+++ b/templates/partials/css.hbs
@@ -58,6 +58,6 @@
 
 	{{!-- PRODUCTION/STAGING --}}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href="{{cdnAsset site='at-stake' env=environment type='css' }}" rel="stylesheet">
+	<link href="{{cdnAsset product='at-stake' env=environment type='css' }}" rel="stylesheet">
 
 {{/ifeq}}
