--- a/templates/partials/script/production.hbs
+++ b/templates/partials/script/production.hbs
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="https://res.cloudinary.com/engagement-lab-home/raw/upload/site/js/core.js"></script>
 
 {{!-- Site JS --}}
-<script type="text/javascript" src="{{cdnAsset site='at-stake' env=environment type='js' }}"></script>
+<script type="text/javascript" src="{{cdnAsset product='at-stake' env=environment type='js' }}"></script>
 
 {{!-- TEMP --}}
 <script type="text/javascript" src="/bower_components/nosleep/NoSleep.min.js"></script>
