small css tweaks scoreboard next round button fix

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -69,11 +69,13 @@
 		position: absolute;
 		bottom: 0px;
 		width: 100%;
+		left: 0px;
 		max-height: 80px;
 		margin: 0px;
 
 		input {
 			width: 100%;
+			left: 0px;
 			// height:100%;
 			margin: 0px;
 			position: absolute;
