--- a/templates/partials/shared/scoreboard.hbs
+++ b/templates/partials/shared/scoreboard.hbs
@@ -24,8 +24,8 @@
 
 		{{/ifeq}}
 
-{{!-- 		<div class="form row {{!-- hidden-el --}}" id="decider">
-	    <input id="btn-next" data-event="game:next_round" class="submit" type="submit" name="submit" value="next round">
-		</div> --}}
+<div class="form row" id="decider">
+    <input id="btn-next" data-event="game:next_round" class="submit" type="submit" name="submit" value="next round">
+	</div>
 
 </div>
