Updated host path for staging env.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -297,7 +297,7 @@
     sessionStorage.setItem('uUID', playerUID);
 
     // Open socket connection
-    socket = io();
+    socket = io('//{{host}}', {'reconnection': true,'reconnectionDelay': 500,'maxReconnectionAttempts':Infinity});
     registerEvents();
 
 	}
