Added runMods() function to allow script modifiers via template tag #modifier, resolved #4, resolved #3.

--- a/templates/partials/decider/pitch.hbs
+++ b/templates/partials/decider/pitch.hbs
@@ -23,3 +23,5 @@
 
 </div>
 
+{{!-- Div's data tag modifies script behavior --}}
+<span id="modifier" class="hidden-el" data-hide_next="true"></span>
