--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -21,7 +21,6 @@
   </div>
 
 </div>
-{{!-- 
-<div class="form row" id="decider">
-  <input id="btn-next" data-event="game:next" class="post-button submit hidden-el" type="submit" name="submit" value="next">
-</div> --}}
+
+{{!-- Div's data tag modifies script behavior --}}
+<span id="modifier" class="hidden-el" data-hide_next="true"></span>
