--- a/templates/partials/decider/decide.hbs
+++ b/templates/partials/decider/decide.hbs
@@ -11,3 +11,5 @@
 
 </div>
 
+{{!-- Div's data tag modifies script behavior --}}
+<span id="modifier" class="hidden-el" data-hide_next="true"></span>
