--- a/templates/partials/decider/think.hbs
+++ b/templates/partials/decider/think.hbs
@@ -10,3 +10,5 @@
 
 </div>
 
+{{!-- Div's data tag modifies script behavior --}}
+<span id="modifier" class="hidden-el" data-hide_next="true"></span>
