--- a/templates/partials/decider/agenda_item.hbs
+++ b/templates/partials/decider/agenda_item.hbs
@@ -24,3 +24,6 @@
 
 
 </div>
+
+{{!-- Div's data tag modifies script behavior --}}
+<span id="modifier" class="hidden-el" data-hide_next="true"></span>
