--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -73,17 +73,17 @@
 
             {{/ifeq}}
 
-                  <div class="container-fluid" id="gameContent">
+                <div class="col-sm-12 col-lg-6 col-centered" id="gameContent">
 
-                  <section id="logo-bar" style="display:none">
-                    <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
-                </section>
-                <button class="btn" id="lobby-back"><</button>
+                    <section id="logo-bar" style="display:none">
+                        <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+                    </section>
+                    <button class="btn" id="lobby-back"><</button>
 
                     <!-- BODY CONTENT START -->
                     {{{body}}}
 
-                  </div>
+                </div>
 
                 <section id="bottom-bar" class="row" style="display:none">
                     <div id="currency" class="col-sm-6">
@@ -92,6 +92,7 @@
                     </div>
                     
                 </section>
+
                 <div class="form next decider row" id="decider-controls" style="display:none;">
                     <input id="btn-next" data-keep_enabled="true" data-event="game:next" class="submit" type="submit" name="submit" value="next">
                 </div>
