--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -29,7 +29,7 @@
 
 <div class="lobby" id="decider" style="display:none">
 
-  <div class="submission col-sm-6">
+  <div class="submission">
       <div class="form create">
 
         <div class="form-prompt white">access code:</div>
