--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -3,8 +3,8 @@
 	// Display as table to vertically center content elements
 	display: table;	
 	// Remove margin and extend width/height from table display settings
-	margin: 0px;
-	width: 100%;
+	// margin: 0px;
+	// width: 100%;
 	height: 100%;
 
 	// During the gameplay
@@ -127,8 +127,6 @@
 }
 
 #login-header {
-	width: 50%;
-	margin-left: 25%;
 
 	img {
 		height: 100%;
@@ -167,8 +165,6 @@ input.post-button {
 
 	.form {
 		color: white;
-		width: 70%;
-		margin-left: 15%;
 	}
 
 	#decks {
