--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -91,6 +91,8 @@
       outline: none !important;
       border: 6px solid #00c5c2;
       box-shadow: 0 0 10px #719ECE; }
+  .form.login input, .form.create input {
+    width: 100%; }
   .form input[type=submit].default, .form button.default {
     color: #00c5c2;
     font-size: x-large;
@@ -105,7 +107,6 @@
     width: 100%;
     display: inline; }
   .form input.game_login {
-    width: 300px;
     background-color: #febb2c; }
   .form .input-container {
     position: relative; }
@@ -153,8 +154,6 @@
 #gameContent {
   background-color: #1EB4BB;
   display: table;
-  margin: 0px;
-  width: 100%;
   height: 100%; }
   #gameContent.in-game {
     background-color: white; }
@@ -221,17 +220,15 @@
   display: table-cell;
   vertical-align: middle; }
 
-#login-header {
+#login-header img {
+  height: 100%;
   width: 50%;
-  margin-left: 25%; }
-  #login-header img {
-    height: 100%;
-    width: 50%;
-    padding: 10px; }
-  #login-header p {
-    color: white;
-    width: 80%;
-    margin-left: 10%; }
+  padding: 10px; }
+
+#login-header p {
+  color: white;
+  width: 80%;
+  margin-left: 10%; }
 
 input.post-button {
   position: fixed;
@@ -247,9 +244,7 @@ input.post-button {
   margin-left: 25%; }
 
 .submission .form {
-  color: white;
-  width: 70%;
-  margin-left: 15%; }
+  color: white; }
 
 .submission #decks {
   width: 100%; }
