Some overall layout cleanup, prevent fewer than 3 players from starting game, removed deprecated files.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -73,7 +73,7 @@
 
             {{/ifeq}}
 
-                <div class="col-sm-12 col-lg-6 col-centered" id="gameContent">
+                <div class="col-sm-12 col-lg-12" id="gameContent">
 
                     <section id="logo-bar" style="display:none">
                         <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
