--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -12,6 +12,7 @@
 
 var clockInterval;
 var playerWasReconnected;
+var startAnim = new TimelineLite({paused: true}).fromTo($('#btn-start-game'), 1, {scale:0, autoAlpha:0}, {scale:1, autoAlpha:1, visibility:'visible', ease:Elastic.easeOut});
 
 // If true, screen doesn't advance right away via 'game:next',
 // it is saved in nextScreenData and advanced to later
@@ -81,13 +82,13 @@ socketEvents = function(eventId, eventData) {
 
             var staticPlayers = $('.player-static');
             var currentPlayers = _.pluck(eventData.players, 'username');
+            var playersNeeded = {{#ifeq debug true}}2{{else}}3{{/ifeq}}
 
-            {{!-- // Allow to start?
-            if(currentPlayers.length === 2)
-            {
-                var startAnim = new TimelineLite();
-                startAnim.from($('#btn-start-game'), 1, {scale:0, autoAlpha: 0, ease:Elastic.easeOut})
-            } --}}
+            // Allow to start?
+            if(currentPlayers.length === playersNeeded)
+                startAnim.play();
+            else if(currentPlayers.length < playersNeeded)
+                startAnim.reverse();
 
             $('#players').empty();
 
