--- a/templates/views/decider/game.hbs
+++ b/templates/views/decider/game.hbs
@@ -28,6 +28,6 @@
 	<div class="col-sm-3"></div>
 
 	<div class="form row {{!-- hidden-el --}}" id="start">
-    <input id="btn-start-game" data-event="game:start" class="post-button submit" type="submit" name="submit" value="start">
+    <input id="btn-start-game" data-event="game:start" class="post-button submit hidden-el" type="submit" name="submit" value="start">
 	</div>
 </div>
