--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -85,13 +85,14 @@
 
                 </div>
 
-                <section id="bottom-bar" class="row" style="display:none">
+                <footer id="bottom-bar">
+                    
                     <div id="currency" class="col-sm-6">
                         <div id="player-coins">[coins] <span></span></div>
                         <div id="pot-coins">[pot] <span></span></div>
                     </div>
                     
-                </section>
+                </footer>
 
                 <div class="form next decider row" id="decider-controls" style="display:none;">
                     <input id="btn-next" data-keep_enabled="true" data-event="game:next" class="submit" type="submit" name="submit" value="next">
