--- a/templates/partials/script/decider_events.hbs
+++ b/templates/partials/script/decider_events.hbs
@@ -2,7 +2,7 @@
 {{!-- 
 /**
  * @Stake v3
- * Developed by Engagement Lab, 2016
+ * Developed by Engagement Lab, 2016-2017
  * ==============
  * 
  * Script includes partial for MODERATOR socket.io events
