--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -1,8 +1,8 @@
 {{!< default}}
 {{!-- 
 /**
- * Emerging Citizens
- * Developed by Engagement Lab, 2016
+ * @Stake v3.0
+ * Developed by Engagement Lab, 2016-2017
  * ==============
  * 
  * Script includes partial for PLAYERS global client logic
@@ -348,10 +348,10 @@ window.onload = checkIfLoggedIn();
 
 {{/ifeq}} --}}
 
-// /play URL
+{{!-- // /play URL
 {{#ifeq section 'login'}}
 
   $('.body').addClass('game-bg');
   $('.body').addClass('player');
 
-{{/ifeq}}
+{{/ifeq}} --}}
