--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -3,7 +3,7 @@
 <div class="lobby" id="login" class="col-sm-12">
   <div class="form login col-lg-6 col-centered">
     <div id="login-header">
-      <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+      <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
       <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
     </div>
     <input type="text" id="access_code" placeholder="room code"> <br />
