--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -5,9 +5,9 @@
     <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>@Stake v3</title>
-        <meta name="description" content="A suite of digital multiplayer games that teaches students how to critique and create civic media.">
-        <meta name="author" content="Engagement Lab">
+        <title>@Stake</title>
+        <meta name="description" content="@Stake is an online and mobile role-playing game that fosters democracy, empathy, and creative problem solving for civic issues.">
+        <meta name="author" content="Engagement Lab at Emerson College">
         
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
@@ -25,7 +25,7 @@
         {{> css environment=env section=section}}
     </head>
     
-    <body class="body {{gameType}}">
+    <body class="body{{#if mobile}} mobile{{/if}}">
         {{#ifeq section "comingsoon"}}
             {{> nav_comingsoon}}
             <div class="col-sm-12">
