--- a/templates/views/errors/404.hbs
+++ b/templates/views/errors/404.hbs
@@ -2,7 +2,7 @@
 {{!--
 /**
 * Engagement Lab Website
-* Developed by Engagement Lab, 2016
+* Developed by Engagement Lab, 2016-2017
 * ==============
 *
 * 404 error Page Template
